<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.creditos.CreditosFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/textCreditos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/creditos"
                android:textSize="30dp"
                android:gravity="center"
                />

            <ImageView
                android:id="@+id/ivCreditosFoto"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/tec"
                android:contentDescription="@string/descripcion"
                />



            <TextView
                android:id="@+id/text_uni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/universidad"
                android:textAlignment="center"
                android:textSize="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/especialidad"
                android:textAlignment="center"
                android:textSize="25dp"/>


            <TextView
                android:id="@+id/text_nombrea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Equipo:"
                android:textAlignment="center"
                android:textSize="25dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="De la O Rangel Ivan Antonio"
                android:textAlignment="center"
                android:textSize="25dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ochoa Mendoza Arturo"
                android:textAlignment="center"
                android:textSize="25dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Paez Bernabe Carlos Uriel"
                android:textAlignment="center"
                android:textSize="25dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profesor"
                android:textAlignment="center"
                android:textSize="25dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textAlignment="center"
                android:textSize="25dp"/>



        </LinearLayout>

    </ScrollView>

</FrameLayout>